// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots HKBarGraph default 1`] = `
<div
  className="flex flex-row"
>
  <svg
    className="br0 ba b--silver"
    height={300}
    onMouseLeave={[Function]}
    onMouseMove={[Function]}
    preserveAspectRatio="none"
    viewBox="0 0 300 300"
    width={300}
  >
    <rect
      className="dim cursor-hand"
      fill="#cfd7e6"
      height={119.04761904761904}
      width={65.85365853658537}
      x={7.317073170731703}
      y={180.95238095238096}
    />
    <rect
      className="dim cursor-hand"
      fill="#cfd7e6"
      height={285.7142857142857}
      width={65.85365853658537}
      x={80.48780487804878}
      y={14.285714285714278}
    />
    <rect
      className="dim cursor-hand"
      fill="#cfd7e6"
      height={71.42857142857143}
      width={65.85365853658537}
      x={153.65853658536585}
      y={228.57142857142856}
    />
    <rect
      className="dim cursor-hand"
      fill="#cfd7e6"
      height={190.47619047619045}
      width={65.85365853658537}
      x={226.8292682926829}
      y={109.52380952380955}
    />
  </svg>
  <div
    className="flex flex-column"
  >
    <a
      className="cursor-hand"
      onClick={[Function]}
    >
      <div
        className="hk-label flex flex-row br2 pa2 mh2 items-center bg-lightest-silver"
      >
        <div
          className="flex items-center"
        >
          <svg
            className="malibu-fill-gradient-dark-gray icon malibu-icon h1 w1 mr1 fill-dark-gray di"
            style={undefined}
          >
            <use
              xlinkHref="#confirm-16"
            />
          </svg>
          <svg
            className="mr1"
            height="31"
            viewBox="0 0 7 31"
            width="7"
          >
            <rect
              fill="#79589f"
              fillOpacity={0.4}
              height="100%"
              width="7"
              x="0"
              y="0"
            />
          </svg>
        </div>
        <div
          className="items-center"
        >
          <span
            className="db ma1 ttu f7 tracked"
          >
            label
          </span>
          <span
            className="db ma1 ttu b f6"
          >
            12
          </span>
        </div>
      </div>
    </a>
  </div>
</div>
`;

exports[`Storyshots HKButton with custom title 1`] = `
<button
  className="hk-button--secondary"
  disabled={false}
  onClick={[Function]}
  title="a custom title"
  type="button"
  value="a custom title"
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton with custom value 1`] = `
<button
  className="hk-button--secondary"
  disabled={false}
  onClick={[Function]}
  title={undefined}
  type="button"
  value="a custom value"
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/danger regular-disabled-async 1`] = `
<button
  className="hk-button--async"
  disabled={true}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/danger regular-disabled-normal 1`] = `
<button
  className="hk-button--disabled-danger"
  disabled={true}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/danger regular-enabled-normal 1`] = `
<button
  className="hk-button--danger"
  disabled={false}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/danger small-disabled-normal 1`] = `
<button
  className="hk-button-sm--disabled-danger"
  disabled={true}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/danger small-enabled-normal 1`] = `
<button
  className="hk-button-sm--danger"
  disabled={false}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/info regular-disabled-async 1`] = `
<button
  className="hk-button--async"
  disabled={true}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/info regular-disabled-normal 1`] = `
<button
  className="hk-button--disabled-info"
  disabled={true}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/info regular-enabled-normal 1`] = `
<button
  className="hk-button--info"
  disabled={false}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/info small-disabled-normal 1`] = `
<button
  className="hk-button-sm--disabled-info"
  disabled={true}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/info small-enabled-normal 1`] = `
<button
  className="hk-button-sm--info"
  disabled={false}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/primary regular-disabled-async 1`] = `
<button
  className="hk-button--async"
  disabled={true}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/primary regular-disabled-normal 1`] = `
<button
  className="hk-button--disabled-primary"
  disabled={true}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/primary regular-enabled-normal 1`] = `
<button
  className="hk-button--primary"
  disabled={false}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/primary small-disabled-normal 1`] = `
<button
  className="hk-button-sm--disabled-primary"
  disabled={true}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/primary small-enabled-normal 1`] = `
<button
  className="hk-button-sm--primary"
  disabled={false}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/secondary regular-disabled-async 1`] = `
<button
  className="hk-button--async"
  disabled={true}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/secondary regular-disabled-normal 1`] = `
<button
  className="hk-button--disabled-secondary"
  disabled={true}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/secondary regular-enabled-normal 1`] = `
<button
  className="hk-button--secondary"
  disabled={false}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/secondary small-disabled-normal 1`] = `
<button
  className="hk-button-sm--disabled-secondary"
  disabled={true}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/secondary small-enabled-normal 1`] = `
<button
  className="hk-button-sm--secondary"
  disabled={false}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/tertiary regular-disabled-async 1`] = `
<button
  className="hk-button--async"
  disabled={true}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/tertiary regular-disabled-normal 1`] = `
<button
  className="hk-button--disabled-tertiary"
  disabled={true}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/tertiary regular-enabled-normal 1`] = `
<button
  className="hk-button--tertiary"
  disabled={false}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/tertiary small-disabled-normal 1`] = `
<button
  className="hk-button-sm--disabled-tertiary"
  disabled={true}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/tertiary small-enabled-normal 1`] = `
<button
  className="hk-button-sm--tertiary"
  disabled={false}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/warning regular-disabled-async 1`] = `
<button
  className="hk-button--async"
  disabled={true}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/warning regular-disabled-normal 1`] = `
<button
  className="hk-button--disabled-warning"
  disabled={true}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/warning regular-enabled-normal 1`] = `
<button
  className="hk-button--warning"
  disabled={false}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/warning small-disabled-normal 1`] = `
<button
  className="hk-button-sm--disabled-warning"
  disabled={true}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/warning small-enabled-normal 1`] = `
<button
  className="hk-button-sm--warning"
  disabled={false}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKLineGraph default 1`] = `
<div
  className="flex flex-row"
>
  <svg
    className="br0 ba b--silver overflow-hidden"
    height={300}
    onMouseLeave={[Function]}
    onMouseMove={[Function]}
    preserveAspectRatio="none"
    viewBox="0 0 800 300"
    width={800}
  >
    <g>
      <path
        d="M0,270.18369461699103L0,270.3577766045245L19.00791984470073,270.3577766045245L19.00791984470073,270.75930878014907L799.7256810949704,270.75930878014907L799.7256810949704,269.8037638558779L800,269.8037638558779"
        fill="none"
        stroke="#79589f"
        strokeWidth="1"
      />
      <path
        d="M0,270.18369461699103L0,270.3577766045245L19.00791984470073,270.3577766045245L19.00791984470073,270.75930878014907L799.7256810949704,270.75930878014907L799.7256810949704,269.8037638558779L800,269.8037638558779L800,300L799.7256810949704,300L799.7256810949704,300L19.00791984470073,300L19.00791984470073,300L0,300L0,300Z"
        fill="#79589f"
        fillOpacity="0.2"
      />
    </g>
    <g>
      <path
        d="M0,147.9018990820034L0,142.91324300130054L19.00791984470073,142.91324300130054L19.00791984470073,143.30079779106478L799.7256810949704,143.30079779106478L799.7256810949704,14.285714285714278L800,14.285714285714278"
        fill="none"
        stroke="#79589f"
        strokeWidth="1"
      />
      <path
        d="M0,147.9018990820034L0,142.91324300130054L19.00791984470073,142.91324300130054L19.00791984470073,143.30079779106478L799.7256810949704,143.30079779106478L799.7256810949704,14.285714285714278L800,14.285714285714278L800,300L799.7256810949704,300L799.7256810949704,300L19.00791984470073,300L19.00791984470073,300L0,300L0,300Z"
        fill="#79589f"
        fillOpacity="0.2"
      />
    </g>
    <g>
      <path
        d="M0,268.1236185418918L0,225.5567605756396L19.00791984470073,225.5567605756396L19.00791984470073,288.9025909626035L799.7256810949704,288.9025909626035L799.7256810949704,296.82332139537516L800,296.82332139537516"
        fill="none"
        stroke="#79589f"
        strokeWidth="1"
      />
      <path
        d="M0,268.1236185418918L0,225.5567605756396L19.00791984470073,225.5567605756396L19.00791984470073,288.9025909626035L799.7256810949704,288.9025909626035L799.7256810949704,296.82332139537516L800,296.82332139537516L800,300L799.7256810949704,300L799.7256810949704,300L19.00791984470073,300L19.00791984470073,300L0,300L0,300Z"
        fill="#79589f"
        fillOpacity="0.2"
      />
    </g>
  </svg>
  <div
    className="flex flex-column"
  >
    <a
      className="cursor-hand"
      onClick={[Function]}
    >
      <div
        className="hk-label flex flex-row br2 pa2 mh2 items-center bg-lightest-silver"
      >
        <div
          className="flex items-center"
        >
          <svg
            className="malibu-fill-gradient-dark-gray icon malibu-icon h1 w1 mr1 fill-dark-gray di"
            style={undefined}
          >
            <use
              xlinkHref="#confirm-16"
            />
          </svg>
          <svg
            className="mr1"
            height="31"
            viewBox="0 0 7 31"
            width="7"
          >
            <rect
              fill="#79589f"
              fillOpacity={0.2}
              height="100%"
              width="7"
              x="0"
              y="0"
            />
          </svg>
        </div>
        <div
          className="items-center"
        >
          <span
            className="db ma1 ttu f7 tracked"
          >
            dragonfruit
          </span>
          <span
            className="db ma1 ttu b f6"
          >
            0
          </span>
        </div>
      </div>
    </a>
    <a
      className="cursor-hand"
      onClick={[Function]}
    >
      <div
        className="hk-label flex flex-row br2 pa2 mh2 items-center bg-lightest-silver"
      >
        <div
          className="flex items-center"
        >
          <svg
            className="malibu-fill-gradient-dark-gray icon malibu-icon h1 w1 mr1 fill-dark-gray di"
            style={undefined}
          >
            <use
              xlinkHref="#confirm-16"
            />
          </svg>
          <svg
            className="mr1"
            height="31"
            viewBox="0 0 7 31"
            width="7"
          >
            <rect
              fill="#79589f"
              fillOpacity={0.4}
              height="100%"
              width="7"
              x="0"
              y="0"
            />
          </svg>
        </div>
        <div
          className="items-center"
        >
          <span
            className="db ma1 ttu f7 tracked"
          >
            mango
          </span>
          <span
            className="db ma1 ttu b f6"
          >
            0
          </span>
        </div>
      </div>
    </a>
    <a
      className="cursor-hand"
      onClick={[Function]}
    >
      <div
        className="hk-label flex flex-row br2 pa2 mh2 items-center bg-lightest-silver"
      >
        <div
          className="flex items-center"
        >
          <svg
            className="malibu-fill-gradient-dark-gray icon malibu-icon h1 w1 mr1 fill-dark-gray di"
            style={undefined}
          >
            <use
              xlinkHref="#confirm-16"
            />
          </svg>
          <svg
            className="mr1"
            height="31"
            viewBox="0 0 7 31"
            width="7"
          >
            <rect
              fill="#79589f"
              fillOpacity={0.6000000000000001}
              height="100%"
              width="7"
              x="0"
              y="0"
            />
          </svg>
        </div>
        <div
          className="items-center"
        >
          <span
            className="db ma1 ttu f7 tracked"
          >
            nectarines
          </span>
          <span
            className="db ma1 ttu b f6"
          >
            0
          </span>
        </div>
      </div>
    </a>
  </div>
</div>
`;

exports[`Storyshots HKModal default 1`] = `
<div>
  <button
    onClick={[Function]}
  >
    show it
  </button>
</div>
`;

exports[`Storyshots HKModal initially open 1`] = `
<div>
  <button
    onClick={[Function]}
  >
    show it
  </button>
  <div
    className="flex flex-column items-center justify-center"
    data-modal="true"
    onClick={[Function]}
    style={
      Object {
        "background": "rgba(0,0,0,.2)",
        "bottom": 0,
        "left": 0,
        "position": "fixed",
        "right": 0,
        "top": 0,
        "zIndex": 9999,
      }
    }
  >
    <div
      className="w-100 mw7 center bg-white shadow-outer-1 br1 relative"
      style={Object {}}
    >
      <div
        className="bg-near-white dark-gray bb b--light-silver f4 flex items-center justify-center br--top br2"
      >
        <div
          className="hk-modal-header pa4 bg-near-white"
        >
          <div>
            header text
          </div>
        </div>
        <div
          className="right-1 h-100 absolute pointer"
          onClick={[Function]}
        >
          <svg
            className="malibu-fill-gradient-dark-gray icon malibu-icon h1 w1 fill-dark-gray o-50 hover-o-100 h-100 v-mid"
            style={undefined}
          >
            <use
              xlinkHref="#delete-16"
            />
          </svg>
        </div>
      </div>
      <div
        className="pa6"
      >
        with some important details here below
      </div>
      <div
        className="bt b--light-silver w-100 pa3 tr"
      >
        <button
          className="hk-button--secondary"
          disabled={false}
          onClick={[Function]}
          title={undefined}
          type="button"
          value={undefined}
        >
           
          Submit
           
        </button>
      </div>
    </div>
  </div>
</div>
`;
